added LLM config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=chat
 
 token.signing.key = ${JWT_SECRET}
+
+ollama.base-url=http://localhost:11434
+ollama.model.free=llama3:8b-instruct-q2_K
+ollama.model.paid=llama3
